@@ -115,7 +115,8 @@ static struct OwnerEntry _properties[] =
     {"logtrace",            (ConfigPropertyOwner* )ConfigManager::logOwner},
     {"cleanlogs",           (ConfigPropertyOwner* )ConfigManager::logOwner},
     {"severity",            (ConfigPropertyOwner* )ConfigManager::logOwner},
-    {"port",                (ConfigPropertyOwner* )ConfigManager::defaultOwner},
+    {"httpPort",            (ConfigPropertyOwner* )ConfigManager::defaultOwner},
+    {"httpsPort",           (ConfigPropertyOwner* )ConfigManager::defaultOwner},
     {"home",                (ConfigPropertyOwner* )ConfigManager::defaultOwner},
     {"daemon",              (ConfigPropertyOwner* )ConfigManager::defaultOwner},
     {"install",             (ConfigPropertyOwner* )ConfigManager::defaultOwner},
