@@ -64,7 +64,7 @@ PAMBasicAuthenticator::PAMBasicAuthenticator()
     //
     ConfigManager* configManager = ConfigManager::getInstance();
 
-    String port = configManager->getCurrentValue("port");
+    String port = configManager->getCurrentValue("httpPort");
 
     //
     // Create realm that will be used for Basic challenges
