@@ -15,7 +15,7 @@
 #                                                                      #
 ########################################################################
  
-options=false
 logdir=/tmp
 traceLevel=1
-port=5988
+httpPort=5988
+httpsPort=5989
